added makefile, separated into modules, fixed a mistake on string termination in trie.decode

--- a/src/huffman_tutorial.ipynb
+++ b/src/huffman_tutorial.ipynb
@@ -243,8 +243,16 @@
      "source": [
       "So the encoded message is actually bigger than the original one...\n",
       "\n",
-      "Python doesn't allow low-level"
+      "Python doesn't allow low-level control of memory, so we will use C code to represent a bit array data structure."
      ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
